--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First project</title>
 </head>
-<body>
+<body  style="background-color: rgb(71, 240, 252);">
     <h1>Anshith Website</h1>
     <p>This is my first website</p>
     <img src="4.jpg" alt="pic">
+
 </body>
 </html>
