--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>My First project</title>
 </head>
 <body  style="background-color: rgb(71, 240, 252);">
-    <h1>Anshith Website</h1>
-    <p>This is my first website</p>
-    <img src="4.jpg" alt="pic">
+    <center>
+        <h1>Anshith Website</h1>
+        <p>This is my first website</p>
+        <img src="4.jpg" alt="pic">
+    </center>
 
 </body>
 </html>
