--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My First project</title>
 </head>
-<body  style="background-color: rgb(71, 240, 252);">
+<body  style="background-color: rgb(78, 247, 56);">
     <center>
         <h1>Anshith Website</h1>
-        <p>This is my first website</p>
-        <img src="4.jpg" alt="pic">
-        <a href="https://www.youtube.com/">Youtube</a>
+        <p>This is my first website</p><br>
+        <a href="https://www.youtube.com/">Youtube</a><br>
+        <img src="4.jpg" alt="pic" width="100px" height="200px">
     </center>
 
 </body>
